--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1></h1>
+        <h1>Guía de alimentación saludable</h1>
     </header>
 
     <script src="script.js"></script>
