Agregando HTML y JS de la opcion B, al seleccionar valor del index devuelve undefined

--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
             <!--
                 Seleccione la opción deseada: [A] Buscar el índice calórico de un alimento; [B] Buscar alimentos por vitamina; [C] Calcular las calorías de una receta. [X] Salir
             -->
-
+            <!-- OPCION B -->
+            <!-- Buscar alimentos por vitamina -->
+            <fieldset>
+                <legend>Selecciona una vitamina: </legend>
+                <div>
+                    <select name="opcionB" id="alimentosVitamina">
+                        <option value="a">A</option>
+                        <option value="b">B</option>
+                        <option value="c">C</option>
+                        <option value="d">D</option>
+                    </select><br><br>
+                </div>
+            </fieldset>
 
         </div>
     </section>
