--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -75,7 +76,7 @@
                     <label for="gramos">Ingrese el número de gramos (minimo 100gr).</label>
                     <input type="text" id="gramos" name="gramos" required minlength="4" maxlength="8" size="10" />
                     <br><br>
-                    <input type="button" onclick="agregarAReceta()" value="Agregar a receta">
+                    <input id="alertaCool" type="button" onclick="agregarAReceta()" value="Agregar a receta">
                 </form>
                 <!-- Aca muestro el resultado -->
                 <div id="recetas"></div>
